# parasift

./: .gitignore  AGENTS.md  Cargo.toml  LICENSE  README.md  SPEC.md  devenv.nix
.github/workflows/: ci.yml  release.yml
examples/: classifier.yaml
src/: classify.rs  client.rs  config.rs  example.rs  main.rs  output.rs
testdata/: classifier.yaml  run-test.sh
testdata/docs/: contract-001.txt  contract-002.txt  email-001.txt  invoice-001.txt  invoice-002.txt  memo-001.txt  purchase-order-001.txt  receipt-001.txt  receipt-002.txt  receipt-003.txt  report-001.txt  resume-001.txt
